# AutoDrillResearch

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: logging_config.py  main.py  reference_db.py
app/pages/: 0_Reference_DB.py  1_Classic_Approach_MVP.py  2_Neural_Approach_MVP.py  3_Audio_Demo.py
asr/: __init__.py  vosk.py
classic_approach/: dtw.py  forced_aligner.py  input_gate.py  mfcc_extractor.py  pipeline.py  preprocessing.py  scorer.py
data/: reference_paths.sqlite3
evaluation/: benchmarks.py  metrics.py  score_graph.py  visual_res.py
neural_approach/: __init__.py  embedding_comparator.py  input_gate.py  pipeline.py  preprocessing.py  scorer.py  wav2vec_extractor.py
scoring/: __init__.py  anchor_calibration.py
tests/: __init__.py  _paths.py  test_anchor_calibration.py  test_asr_vosk.py  test_classic_approach.py  test_classic_scorer.py  test_neural_approach.py  test_neural_scorer.py
tests/integration/: test_classic_pipeline.py  test_neural_pipeline.py
tests/unit/: test_anchor_calibration.py  test_asr_vosk.py  test_classic_pipeline.py  test_classic_scorer.py  test_classic_signal_processing.py  test_neural_comparator.py  test_neural_pipeline.py  test_neural_scorer.py  test_neural_wav2vec_extractor.py
