[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diploma-pronunciation"
version = "0.1.0"
description = "MVP"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*", "classic_approach", "classic_approach.*"]
