[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diploma-pronunciation"
version = "0.1.0"
description = "MVP"
requires-python = ">=3.12"

dependencies = [
    "altair==6.0.0",
    "annotated-doc==0.0.4",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "audioread==3.1.0",
    "blinker==1.9.0",
    "cachetools==7.0.5",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.5",
    "click==8.3.1",
    "contourpy==1.3.3",
    "cuda-bindings==13.2.0",
    "cuda-pathfinder==1.5.1",
    "cuda-toolkit==13.0.2",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "dtaidistance==2.4.0",
    "filelock==3.25.2",
    "fonttools==4.62.1",
    "fsspec==2026.2.0",
    "gitdb==4.0.12",
    "GitPython==3.1.46",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "hf-xet==1.4.2",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface_hub==1.7.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "Jinja2==3.1.6",
    "joblib==1.5.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "kiwisolver==1.5.0",
    "kneed==0.8.5",
    "lazy-loader==0.5",
    "librosa==0.11.0",
    "llvmlite==0.46.0",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "matplotlib==3.10.8",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "msgpack==1.1.2",
    "narwhals==2.18.0",
    "networkx==3.6.1",
    "numba==0.64.0",
    "numpy==2.4.3",
    "nvidia-cublas==13.1.0.3",
    "nvidia-cuda-cupti==13.0.85",
    "nvidia-cuda-nvrtc==13.0.88",
    "nvidia-cuda-runtime==13.0.96",
    "nvidia-cudnn-cu13==9.19.0.56",
    "nvidia-cufft==12.0.0.61",
    "nvidia-cufile==1.15.1.6",
    "nvidia-curand==10.4.0.35",
    "nvidia-cusolver==12.0.4.66",
    "nvidia-cusparse==12.6.3.3",
    "nvidia-cusparselt-cu13==0.8.0",
    "nvidia-nccl-cu13==2.28.9",
    "nvidia-nvjitlink==13.0.88",
    "nvidia-nvshmem-cu13==3.4.5",
    "nvidia-nvtx==13.0.85",
    "packaging==26.0",
    "pandas==2.3.3",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "pluggy==1.6.0",
    "pooch==1.9.0",
    "praatio==6.2.2",
    "protobuf==6.33.5",
    "pyarrow==23.0.1",
    "pycparser==3.0",
    "pydeck==0.9.1",
    "Pygments==2.19.2",
    "pyparsing==3.3.2",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "PyYAML==6.0.3",
    "referencing==0.37.0",
    "regex==2026.2.28",
    "requests==2.32.5",
    "rich==14.3.3",
    "rich-click==1.9.7",
    "rpds-py==0.30.0",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "setuptools==81.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.3",
    "soundfile==0.13.1",
    "soxr==1.0.0",
    "SQLAlchemy==2.0.48",
    "streamlit==1.55.0",
    "sympy==1.14.0",
    "tenacity==9.1.4",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "toml==0.10.2",
    "torch==2.11.0",
    "torchaudio==2.11.0",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "transformers==5.3.0",
    "triton==3.6.0",
    "typer==0.24.1",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "vosk==0.3.45",
    "watchdog==6.0.0",
    "wheel==0.46.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app", "app.*", "asr", "asr.*", "classic_approach", "classic_approach.*", "neural_approach", "neural_approach.*", "scoring", "scoring.*"]
